# MagIEpy

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  .rtd-environment.yaml  .ruff.toml  MANIFEST.in  README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: conf.py  index.rst
licenses/: LICENSE.rst
